# CQU-Study

./: README.md
大三下/编译原理/实验/实验1/: CMakeLists.txt  README.md  main.cpp
大三下/编译原理/实验/实验1/include/front/: abstract_syntax_tree.h  lexical.h
大三下/编译原理/实验/实验1/include/ir/: ir_function.h  ir_instruction.h  ir_operand.h  ir_operator.h  ir_program.h
大三下/编译原理/实验/实验1/test/: log.txt  run.py  score.py  test.py
大三下/编译原理/实验/实验1/test/output/basic/: 00_main.tk  01_var_defn2.json  04_arr_defn3.json  07_const_var_defn3.json  07_const_var_defn3.tk  08_const_array_defn.json  12_addc.tk  13_sub2.json  15_mul.tk  16_mulc.tk  17_div.tk  18_divc.tk  20_rem.json  25_while_if.json  31_while_if_test1.json  31_while_if_test1.tk  33_while_if_test3.tk  35_op_priority1.tk  36_op_priority2.json  36_op_priority2.tk  45_comment1.tk
大三下/编译原理/实验/实验1/test/output/function/: 28_while_test3.json  39_op_priority5.json  48_assign_complex_expr.tk  49_if_complex_expr.json  49_if_complex_expr.tk
大三下/编译原理/实验/实验1/test/ref/s0/basic/: 02_var_defn3.tk  06_const_var_defn2.tk  21_if_test2.tk  30_continue.tk  37_op_priority3.tk  41_unary_op2.tk
大三下/编译原理/实验/实验1/test/ref/s0/function/: 28_while_test3.tk  55_sort_test1.tk  66_exgcd.tk
大三下/编译原理/实验/实验1/test/ref/s1/basic/: 03_arr_defn2.json  09_func_defn.json  11_add2.json  12_addc.json  16_mulc.json  17_div.json  35_op_priority1.json  37_op_priority3.json  40_unary_op.json  41_unary_op2.json
大三下/编译原理/实验/实验1/test/ref/s1/function/: 43_logi_assign.json  48_assign_complex_expr.json
大三下/编译原理/实验/实验1/test/testcase/basic/: 04_arr_defn3.sy  11_add2.sy  41_unary_op2.sy
大三下/编译原理/实验/实验1/test/testcase/function/: 43_logi_assign.sy
大三下/编译原理/实验/实验2/: CMakeLists.txt  README.md  main.cpp
大三下/编译原理/实验/实验2/include/front/: abstract_syntax_tree.h  lexical.h  token.h
大三下/编译原理/实验/实验2/include/ir/: ir.h  ir_function.h  ir_operator.h  ir_program.h
大三下/编译原理/实验/实验2/include/tools/: sylib.h
大三下/编译原理/实验/实验2/src/front/: abstract_syntax_tree.cpp  semantic.cpp  syntax.cpp
大三下/编译原理/实验/实验2/src/ir/: ir_function.cpp  ir_operand.cpp  type.cpp
大三下/编译原理/实验/实验2/test/: build.py  run.py  score.py
大三下/编译原理/实验/实验2/test/output/basic/: 04_arr_defn3.out  09_func_defn.out  13_sub2.out  21_if_test2.out  22_if_test3.out  27_while_test2.out  29_break.out  32_while_if_test2.out  36_op_priority2.out  42_empty_stmt.out
大三下/编译原理/实验/实验2/test/output/function/: 34_arr_expr_len.out  47_hex_oct_add.out  48_assign_complex_expr.out  62_percolation.out  73_int_io.out  78_side_effect.out  95_float.out
大三下/编译原理/实验/实验2/test/ref/s0/basic/: 01_var_defn2.tk  03_arr_defn2.tk  08_const_array_defn.tk  22_if_test3.tk  25_while_if.tk  27_while_test2.tk  29_break.tk  32_while_if_test2.tk  (+3 more)
大三下/编译原理/实验/实验2/test/testcase/function/: 38_op_priority4.sy  39_op_priority5.sy  95_float.sy
(+942 files in other folders)
